--- a/index.html
+++ b/index.html
@@ -1,95 +1,141 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Home &#8212; At the Oscars</title>
   <meta charset="utf-8">
-  <title>Marisela's Favorite Music Albums</title>
-  <meta name="description" content="ranking favorite music albums of Marisela Meskus by
-  favorite musical artists, including K-pop boy bands 2AM, Super Junior, New-age artist Enya,
-  and Rock groups Arcade Fire and The Beatles">
-  <meta name="robots" content="noindex">
+  <meta name=description content="Get prepared for the 2021 Academy Awards Ceremony! Choose your nominee list for
+  this year, revote what should have won in 2020, and learn fun facts about the biggest winners and snubs
+  of the Oscars.">
+  <meta name=robots content="noindex">
 </head>
 <body>
-  <h1>My favorite albums</h1>
-  <p>The following is a ranking of my favorite albums by my favorite artists
-    (in alphabetical order by genre).</p>
-      <ul>
-        <li><abbr title="Korean Pop">K-pop</abbr>
-            <ul>
-                <li>2AM
-                  <ol>
-                    <li>One Spring Day</li>
-                    <li>F. Scott Fitzgerald's Way of Love</li>
-                    <li>Voice</li>
-                    <li>Nocturne</li>
-                    <li>Saint O'Clock</li>
-                  </ol>
-                <li>Super Junior
-                  <ol>
-                    <li>Sorry Sorry</li>
-                    <li>Mr. Simple</li>
-                    <li>Mamacita</li>
-                    <li>Don't Don</li>
-                    <li>Bonamana</li>
-                  </ol>
-                </li>
-            </ul>
-        <li>New-age
-            <ul>
-                <li>Enya
-                  <ol>
-                    <li>Paint the Sky with Stars</li>
-                    <li>A Day Without Rain</li>
-                    <li>Shepherd Moons</li>
-                    <li>Watermark</li>
-                    <li>Memory of Trees</li>
-                  </ol>
-                </li>
-            </ul>
-        </li>
-        <li>Rock
-            <ul>
-                <li>Arcade Fire
-                  <ol>
-                    <li>Everything Now</li>
-                    <li>Reflektor</li>
-                    <li>Funeral</li>
-                    <li>The Suburbs</li>
-                    <li>Neon Bible</li>
-                  </ol>
-                <li>The Beatles
-                  <ol>
-                    <li>A Hard Day's Night</li>
-                    <li>Help!</li>
-                    <li>Magical Mystery Tour</li>
-                    <li>Meet the Beatles!</li>
-                    <li>Rubber Soul</li>
-                  </ol>
-                </li>
-            </ul>
-        </li>
-      </ul>
-    <h2>Glossary</h2>
-    <dl>
-        <dt>2AM</dt>
-        <dd>A South Korean boy group, that consisted of Jo Kwon, Lee Changmin, Lim Seulong and Jeong Jinwoon.
-          It was one of the two subgroups split from the eleven-member boy band One Day, the other being 2PM.<br>
-          <i>&#8212;https://en.wikipedia.org/wiki/2AM_(band)</i></dd>
-        <dt>K-pop</dt>
-        <dd>A genre of popular music originating in South Korea. It is influenced by styles and genres
-          from around the world, such as experimental, rock, jazz, gospel, hip hop, R&B, reggae, electronic
-          dance, folk, country, and classical on top of its traditional Korean music roots.<br>
-          <i>&#8212;https://en.wikipedia.org/wiki/K-pop</i></dd>
-        <dt>New-age music</dt>
-        <dd>A genre of music intended to create artistic inspiration, relaxation, and optimism.<br>
-          <i>&#8212;https://en.wikipedia.org/wiki/New-age_music</i></dd>
-        <dt>Super Junior</dt>
-        <dd>Super Junior, also known as SJ or SuJu, is a South Korean boy band debuted on November 6, 2005,
-          by producer Lee Soo-man of SM Entertainment. They are also dubbed by the media and Korean Music Awards
-          as the "King of Hallyu Wave" due to their prominent contributions in Korean Wave&#8230;Their successes and
-          popularity as all-rounded entertainers have led other Korean entertainment managements to also begin
-          training their music groups in other aspects of the entertainment industry.<br>
-          <i>https://en.wikipedia.org/wiki/Super_Junior</i></dd>
-
-    </dl>
+  <header>
+    <h1>At the Oscars</h1>
+  </header>
+  <hr>
+  <nav>
+    <a href="index.html">Home</a> | <a href="awards.html">2021 Awards</a> |
+    <a href="revote.html">Revote 2020</a> | <a href="records.html">Wins and Snubs</a> |
+    <a href="comments.html">Comments</a>
+  </nav>
+  <hr>
+  <section>
+    <header>
+    <h2>Home</h2>
+    <p>Get prepared for the 2021 Academy Awards Ceremony, choose your list of nominee for 2021, revote the films
+      that should have won in 2020, and learn fun facts about the biggest winners and snubs of the Oscars.</p>
+    </header>
+    <section>
+      <h3>Glossary</h3>
+      <dl>
+          <dt>Big Five</dt>
+          <dd>The &#8220;Big Five&#8221; Academy Awards are the Oscars for Best Picture, Best Director, Best Actor,
+            Best Actress, and Best Screenplay (either Best Original Screenplay or Best Adapted Screenplay).
+            <i>&#8212;https://en.wikipedia.org/wiki/List_of_Big_Five_Academy_Award_winners_and_nominees</i></dd>
+          <dt>Snub</dt>
+          <dd>An expected recognition (in the form of a nomination or award) that is not given by the Academy.
+            <i>&#8212;https://www.themarysue.com/what-is-a-snub/</i></dd>
+      </dl>
+    </section>
+    <section>
+      <h3>Favorite Best Picture Winners</h3>
+          <form action="#" method="post">
+          <fieldset>
+          <legend>Top 5 Best Picture Winners</legend>
+          <br>
+          Select your top 5 Best Picture winners of the 21st century:
+          <br><br>
+          <label>
+            <input type="checkbox" name="top" value="Parasite">Parasite (2020)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="Green Book">Green Book (2019)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="The Shape of Water">The Shape of Water (2018)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="Moonlight">Moonlight (2017)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="Spotlight">Spotlight (2016)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="Birdman">Birdman (2015)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="12 Years a Slave">12 Years a Slave (2014)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="Argo">Argo (2013)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="The Artist">The Artist (2012)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="The King's Speech">The King's Speech (2011)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="The Hurt Locker">The Hurt Locker (2010)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="Slumdog Millionaire">Slumdog Millionaire (2009)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="No Country for Old Men">No Country for Old Men (2008)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="The Departed">The Departed (2007)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="Crash">Crash (2006)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="Million Dollar Baby">Million Dollar Baby (2005)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="The Lord of the Rings: The Return of the King">The Lord of the Rings: The Return of the King (2004)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="Chicago">Spotlight (2003)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="A Beautiful Mind">A Beautiful Mind (2002)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="Gladiator">Gladiator (2001)
+          </label>
+          <br>
+          <label>
+            <input type="checkbox" name="top" value="American Beauty">American Beauty (2000)
+          </label>
+        </fieldset>
+      </form>
+      <input type="submit" value="Submit"><input type="reset" value="Clear">
+    </section>
+  </section>
+  <hr>
+  <footer>
+    <p>Copyright &#169; 2021 Marisela Meskus. All rights reserved.</p>
+  </footer>
 </body>
 </html>
