--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </label>
           <br>
           <label>
-            <input type="checkbox" name="top" value="Chicago">Spotlight (2003)
+            <input type="checkbox" name="top" value="Chicago">Chicago (2003)
           </label>
           <br>
           <label>
